--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"author": "lucdev",
+	"description": "A project that will help to ease the distribution of cashbound",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
