--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"author": "lucdev",
 	"description": "A project that will help to ease the distribution of cashbound",
 	"keywords": ["freecodecamp"],
+	"license": "MIT",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
