--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"version": "1.2.0",
 
 	"dependencies": {
-		"@freecodecamp/example": "1.1.0",
+		"@freecodecamp/example": "1.2.13",
+		"package": "MAJOR.MINOR.PATCH",
 		"express": "^4.14.0"
 	},
 	"main": "server.js",
